unpackaged/main/default/objects/SBQQ__ImportColumn__c/SBQQ__ImportColumn__c.object-meta.xml
<CustomObject>
    <customHelpPage>SBQQ__ImportFormatHelp</customHelpPage>
    <label>Import Column</label>
    <nameField>
        <label>Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Import Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>