unpackaged/main/default/objects/SBQQ__ImportColumn__c/fields/SBQQ__ImportFormat__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ImportFormat__c</fullName>
    <description>The format in which your records are being imported.</description>
    <inlineHelpText>Select the format in which your records will be imported.</inlineHelpText>
    <label>Import Format</label>
    <referenceTo>SBQQ__ImportFormat__c</referenceTo>
    <relationshipLabel>Import Columns</relationshipLabel>
    <relationshipName>ImportColumns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>